--- a/public/tasks/src/app/views/headerContainer/headerContainer.html
+++ b/public/tasks/src/app/views/headerContainer/headerContainer.html
@@ -9,11 +9,20 @@
 		</div>
 		<div class="right-area">
 			<div class="header-portrait">
-				<i class="portrait-icon"></i>
+				<img src="/img/section-portrait-1.png" alt="" class="portrait-icon">
 			</div>
 			<div class="header-request">
 				<i class="request-icon"></i>
 			</div>
 		</div>
+
+		<ul class="function-list none">
+			<li class="patop"></li>
+			<li class="name">叉烧包</li>
+			<li class="my-function my-function-change">我的求P</li>
+			<li class="my-function">我的帮P</li>
+			<li class="my-function">我的作品</li>
+			<li class="sign-out">退出</li>
+		</ul>
 	</div>
 </div>
