--- a/public/tasks/src/app/views/index/index.html
+++ b/public/tasks/src/app/views/index/index.html
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 		<div class="section-main">
-			<ul class="photos">
+			<ul class="photos clearfix">
 				<li class="photo-item origin">
 					<div class="item-wrapper">
 						<img class="item-img" src="/img/photo-1-origin.png">
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div class="section-main">
-			<ul class="photos">
+			<ul class="photos clearfix">
 				<li class="photo-item origin">
 					<div class="item-wrapper">
 						<img class="item-img" src="/img/photo-2-origin.png">
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 		<div class="section-main last-section">
-			<ul class="photos">
+			<ul class="photos clearfix">
 				<li class="photo-item origin">
 					<div class="item-wrapper">
 						<img class="item-img" src="/img/photo-3-origin.png">
