--- a/public/tasks/src/less/common.less
+++ b/public/tasks/src/less/common.less
@@ -33,7 +33,10 @@ body, html {
     display: none !important;
 }
 .none {
-    display: none !important;  
+    display: none ;  
+}
+.block {
+    display: block ;  
 }
 input:-moz-placeholder {
 	color: #fff;
@@ -57,6 +60,7 @@ input::-webkit-input-placeholder {
 
 /*公用*/
 .comWidth{
+	position: relative;
 	width: 980px;
 	margin: 0 auto;
 }
@@ -97,22 +101,71 @@ body{
 			}
 		}
 	}
+	.function-list {
+		overflow: hidden;
+		position: absolute;
+		z-index: 9;
+		top: 0;
+		right: 97px;
+		width: 215px;
+		background-color: #fff;
+		border-radius: 0 0 30px 30px;
+		li {
+			display: block;
+		}
+		.patop {
+			height: 60px;
+			background-color: #ffaf47;
+			margin-bottom: 25px;
+		}
+		.name {
+			padding: 0 10px;
+			color: #000000;
+			font-size: 16px;
+			text-align: right;
+			margin-bottom: 10px;
+
+		}
+		.my-function {
+			width: 132px;
+			height: 34px;
+			border-radius: 30px;
+			margin: 0 auto 8px;
+			text-align: center;
+			line-height: 34px;
+			font-size: 16px;
+			color: #a9a9a9;
+		}
+		.my-function-change {
+			border: 1px solid #ffaf47;
+			color: #ffaf47;
+		}
+		.sign-out {
+			height: 50px;
+			background-color: #f8f4f4;
+			font-size: 16px;
+			color: #b7b7b7;
+			line-height: 50px;
+			text-align: center;
+		}
+	}
 	.right-area{
 		float: right;
 		font-size: 0px;
 		position: relative;
 		.header-portrait{
+			position: relative;
+			z-index: 10;
 			display: inline-block;
 			vertical-align: top;
 			width: 37px;
 			height: 37px;
 			overflow: hidden;
-			margin: 12px 110px 0 0;
+			margin: 8px 106px 0 0;
+			border: 4px solid #ffaf47;
 			.portrait-icon{
 				display: block;
 				width: 100%;
-				height: 100%;
-				background: url(/img/index-sprite.png) no-repeat -67px -42px;
 			}
 		}
 		.header-request{
@@ -271,7 +324,7 @@ body{
 			font-size: 0;
 			padding: 0 15px;
 			.photo-item{
-				display: inline-block;
+				float: left;
 				position: relative;
 				width: 238px;
 				overflow: hidden;
