--- a/public/tasks/src/app/views/detail/workDetail.html
+++ b/public/tasks/src/app/views/detail/workDetail.html
@@ -109,14 +109,14 @@
 		</ul>
 		<div class="userCount-grid">
 			<span class="grid-header">66个人正在帮P</span>
-			<div class="portrait-grid">
-				<div class="grid-item"><img src="" alt=""></div>
-				<div class="grid-item"><img src="" alt=""></div>
-				<div class="grid-item"><img src="" alt=""></div>
-				<div class="grid-item"><img src="" alt=""></div>
-				<div class="grid-item"><img src="" alt=""></div>
-				<div class="grid-item"><img src="" alt=""></div>
-			</div>
+			<ul class="portrait-grid clearfix">
+				<li class="grid-item"><img src="/img/grid-item-1.png" alt="用户1"></li>
+				<li class="grid-item"><img src="/img/grid-item-2.png" alt="用户2"></li>
+				<li class="grid-item"><img src="/img/grid-item-3.png" alt="用户2"></li>
+				<li class="grid-item"><img src="/img/grid-item-4.png" alt="用户2"></li>
+				<li class="grid-item"><img src="/img/grid-item-5.png" alt="用户2"></li>
+				<li class="grid-item"><img src="/img/grid-item-6.png" alt="用户2"></li>
+			</ul>
 		</div>
 	</div>
 </div>
