--- a/public/tasks/src/less/workDetail.less
+++ b/public/tasks/src/less/workDetail.less
@@ -327,6 +327,9 @@ body{
             border-radius: 30px;
             text-align: center;
             a{
+                display: block;
+                width: 100%;
+                height: 100%;
                 font-size: 16px;
                 color: #fff;
                 background-color: transparent;
@@ -346,17 +349,31 @@ body{
         width: 100%;
         height: 225px;
         margin-top: 70px;
+        padding-bottom: 10px;
         border: 1px solid #e8e8e8;
         background-color: #fff;
         .grid-header{
             display: block;
-            margin: 25px auto;
+            margin: 22px auto;
             color: #000;
             text-align: center;
         }
         .portrait-grid{
             display: block;
-            margin: 0 auto 70px;
+            line-height: 0;
+            margin: 0 auto;
+            .grid-item{
+                float: left;
+                width: 50px;
+                height: 50px;
+                margin-left:15px;
+                margin-bottom: 25px;
+                img{
+                    display: block;
+                    width: 100%;
+                    height: 100%
+                }
+            }
         }
     }
 }
