add div.grid-nought to workDetail

--- a/public/tasks/src/app/views/detail/workDetail.html
+++ b/public/tasks/src/app/views/detail/workDetail.html
@@ -118,5 +118,11 @@
 				<li class="grid-item"><img src="/img/grid-item-6.png" alt="用户2"></li>
 			</ul>
 		</div>
+		<div class="userCount-grid-nought hide">
+			<span class="grid-header">P图第一人就是你啦
+				<i class="dot">.</i>
+			</span>
+			<span class="grid-nought">快来帮P</span>
+		</div>
 	</div>
 </div>
