--- a/public/tasks/src/less/workDetail.less
+++ b/public/tasks/src/less/workDetail.less
@@ -376,4 +376,40 @@ body{
             }
         }
     }
+    .userCount-grid-nought{
+        width: 100%;/
+        margin-top: 70px;
+        border: 1px solid #e8e8e8;
+        background-color: #fff;
+        .grid-header{
+            display: block;
+            position: relative;
+            padding: 22px 0;
+            margin: 0 25px;
+            color: #000;
+            text-align: center;
+            border-bottom: 1px solid #e8e8e8;
+            .dot{
+                position: absolute;
+                bottom: -5px;
+                left: 50%;
+                transform:translate(-50%,0);
+                padding: 0 5px;
+                color: #ffae48;
+                font-size: 15px;
+                font-weight: 700;
+                z-index: 5;
+                background-color: #fff;
+                cursor: default;
+            }
+        }
+        .grid-nought{
+            display: block;
+            position: relative;
+            padding: 22px 0;
+            margin: 0 25px;
+            color: #ffae48;
+            text-align: center;
+        }
+    }
 }
