--- a/public/tasks/src/less/workDetail.less
+++ b/public/tasks/src/less/workDetail.less
@@ -74,6 +74,10 @@ body{
                 font-size: 18px;
                 color: #000;
             }
+            .origin-desc{
+                height: 60px!important;
+                line-height: 45px!important;
+            }
             .work-wrapper{
                 position: relative;
                 width: 405px;
@@ -95,6 +99,14 @@ body{
                     background: url(/img/index-sprite.png)no-repeat -234px -42px;
                     opacity: 0.9;
                 }
+                .icon-download{
+                    width: 245px!important;
+                    height: 80px!important;
+                    background: url(/img/index-sprite.png)no-repeat -47px -156px!important;
+                }
+            }
+            .origin-download{
+                width: 430px!important;
             }
         }
         .section-bottom{
@@ -377,7 +389,7 @@ body{
         }
     }
     .userCount-grid-nought{
-        width: 100%;/
+        width: 100%;
         margin-top: 70px;
         border: 1px solid #e8e8e8;
         background-color: #fff;
