adjusting div.download-origin

--- a/public/tasks/src/app/views/workDetail_download-origin/workDetail_download-origin.html
+++ b/public/tasks/src/app/views/workDetail_download-origin/workDetail_download-origin.html
@@ -1,6 +1,6 @@
 <div class="wrap-page comWidth clearfix">
 	<div class="work-section-wrapper clearfix">
-		<div class="work-section first-section">
+		<div class="work-section download-origin-section">
 			<div class="section-top clearfix">
 				<div class="section-portrait">
 					<img class="section-portrait-img" src="/img/section-portrait-1.png" alt="用户头像">
