--- a/public/tasks/src/less/workDetail.less
+++ b/public/tasks/src/less/workDetail.less
@@ -12,6 +12,11 @@ body{
 .work-section-wrapper{
     width: 720px;
     float: left;
+    .download-origin-section{
+        margin-top: 65px;
+        margin-bottom: 0!important;
+        padding-bottom: 40px;
+    }
     .first-section{
         margin-top: 65px;
         margin-bottom: 110px!important;
