--- a/public/tasks/src/less/homepage.less
+++ b/public/tasks/src/less/homepage.less
@@ -44,20 +44,37 @@ body{
 				height: 40px;
 				line-height: 40px;
 				margin-left: 90px;
+				border-radius: 20px;
 				a{
 					display: block;
 					width: 100%;
 					height:100%;
-					color: #bababa;
 					font-size: 18px;
 					text-align: center;
 				}
 			}
-			.active{
+			.myRequest{
 				border: 1px solid #ffaf47;
-				border-radius: 20px;
 				a{
-					color: #ffaf47;
+					color:#ffaf47;
+				}
+			}
+			.myOffer{
+				border:1px solid #ff6a69;
+				a{
+					color: #ff6a69;
+				}
+			}
+			.myWork{
+				border:1px solid #89d2f5;
+				a{
+					color: #89d2f5;
+				}
+			}
+			.unactive{
+				border:0;
+				a{
+					color: #bababa;
 				}
 			}
 		}
@@ -89,128 +106,295 @@ body{
 	}
 	.homepage-content{
 		padding-bottom: 35px;
-		.content-section{
-			padding: 30px 0;
-			.line-break{
-				position: relative;
-				margin-left: 55px;
-				.break-date{
-					float: left;
-					.icon-break{
-						display: block;
+		.content-myRequest{
+			.content-section{
+				padding: 30px 0;
+				.line-break{
+					position: relative;
+					margin-left: 55px;
+					.break-date{
 						float: left;
-						width: 12px;
-						height: 12px;
-						background: url(/img/index-sprite.png) no-repeat -27px -65px;
+						.icon-break{
+							display: block;
+							float: left;
+							width: 12px;
+							height: 12px;
+							background: url(/img/index-sprite.png) no-repeat -27px -65px;
+						}
+						.date-text{
+							display: block;
+							float: left;
+							margin-left: 10px;
+							line-height: 12px;
+							color: #a9a9a9;
+							font-size: 14px;
+							em{
+								font-style: normal;
+								margin-left: 15px;
+							}
+						}
 					}
-					.date-text{
-						display: block;
+					.break-line{
 						float: left;
-						margin-left: 10px;
+						margin:5px 12px;
+						height: 0;
 						line-height: 12px;
-						color: #a9a9a9;
-						font-size: 14px;
-						em{
-							font-style: normal;
-							margin-left: 15px;
+						width: 700px;
+						border-top:1px solid #e8e8e8;
+					}
+					.delete-button{
+						position: absolute;
+						z-index: 1;
+						top: 0;
+						right: 30px;
+						margin-top: -8px;
+						padding: 0 12px;
+						text-align: center;
+						background-color: #fff;
+						input{
+							color: #b7b7b7;
+							cursor: pointer;
+							width: 60px;
+							height: 25px;
+							border: 1px solid #e8e8e8;
+							border-radius: 12px;
+							background-color: transparent;
 						}
 					}
 				}
-				.break-line{
-					float: left;
-					margin:5px 12px;
-					height: 0;
-					line-height: 12px;
-					width: 700px;
-					border-top:1px solid #e8e8e8;
-				}
-				.delete-button{
-					position: absolute;
-					z-index: 1;
-					top: 0;
-					right: 30px;
-					margin-top: -8px;
-					padding: 0 12px;
-					text-align: center;
-					background-color: #fff;
-					input{
-						color: #b7b7b7;
-						cursor: pointer;
-						width: 60px;
-						height: 25px;
-						border: 1px solid #e8e8e8;
-						border-radius: 12px;
-						background-color: transparent;
-					}
-				}
-			}
-			.content-header{
-				margin-top: 12px;
-				margin-bottom: 20px;
-				.header-left{
-					float: left;
-					height: 40px;
-					margin-left: 78px;
-					line-height: 40px;
-					.header-desc{
-						font-size: 18px;
-						color: #000;
-					}
-				}
-				.header-right{
-					float: right;
-					margin-right: 65px;
-					.header-button{
-						color: #fff;
-						width: 80px;
+				.content-header{
+					margin-top: 12px;
+					margin-bottom: 20px;
+					.header-left{
+						float: left;
 						height: 40px;
-						margin-left: 35px;
-						border: 1px solid #e8e8e8;
-						border-radius: 20px;
-						cursor: pointer;
+						margin-left: 78px;
+						line-height: 40px;
+						.header-desc{
+							font-size: 18px;
+							color: #000;
+						}
 					}
-					.offerps{
-						background-color: #ffaf47;
+					.header-right{
+						float: right;
+						margin-right: 65px;
+						.header-button{
+							color: #fff;
+							width: 80px;
+							height: 40px;
+							margin-left: 35px;
+							border: 1px solid #e8e8e8;
+							border-radius: 20px;
+							cursor: pointer;
+						}
+						.offerps{
+							background-color: #ffaf47;
+						}
+						.share{
+							background-color: #7ecef4;
+						}
 					}
-					.share{
-						background-color: #7ecef4;
+				}
+				.work-zone{
+					.origin-work{
+						position: relative;
+						overflow: hidden;
+						margin-left: 65px;
+						float: left;
+						width: 240px;
+						border: 1px solid #fff;
+						border-radius: 10px;
+						img{
+							display: block;
+							width: 100%;
+						}
+						.icon-origin{
+						    display: block;
+						    position: absolute;
+						    bottom: 1px;
+						    left: 0;
+						    width: 45px;
+						    height: 28px;
+						    background: url(/img/index-sprite.png)no-repeat -234px -42px;
+						    opacity: 0.9;
+						}
+					}
+					.art-work{
+						overflow: hidden;
+						margin-left: 100px;
+						float: left;
+						width: 240px;
+						border: 1px solid #fff;
+						border-radius: 10px;
+						img{
+							display: block;
+							width: 100%;
+						}
 					}
 				}
 			}
-			.work-zone{
-				.origin-work{
+		}
+		.content-myOffer{/*切换至content-myOffer时，注意修改homepage的margin-bottom:65px;homepage-content的padding-bottom增加30px*/
+			.content-section{
+				.content-header{
 					position: relative;
-					overflow: hidden;
-					margin-left: 65px;
-					float: left;
-					width: 240px;
-					border: 1px solid #fff;
-					border-radius: 10px;
-					img{
-						display: block;
-						width: 100%;
+					padding: 35px 0 15px 0;
+					margin: 0 15px;
+					border-bottom: 1px solid #e8e8e8;
+					.content-header-portrait{
+						float: left;
+						width: 90px;
+						height: 90px;
+						portrait-img{
+							display: block;
+							width: 100%;
+							height: 100%;
+						}
 					}
-					.icon-origin{
-					    display: block;
-					    position: absolute;
-					    bottom: 1px;
-					    left: 0;
-					    width: 45px;
-					    height: 28px;
-					    background: url(/img/index-sprite.png)no-repeat -234px -42px;
-					    opacity: 0.9;
+					.header-info{
+						display: block;
+						float: left;
+						margin-left: 15px;
+						.user-name{
+						    color: #666;
+						    font-size: 16px;
+						    margin: 10px 0px 7px 0;
+						}
+						.pubdate{
+						    color: #ccc;
+						    font-size: 14px;
+						    margin-bottom: 11px;
+						}
+						.ps-desc{
+							color: #000;
+							font-size: 16px;
+							font-weight: 500;
+						}
+					}
+					.header-btn-wrapper{
+						float: right;
+						.header-btn{
+							width: auto;
+							padding: 0 15px;
+							height: 35px;
+							margin-left: 40px;
+							color: #fff;
+							border: 1px solid #eee;
+							border-radius: 17px;
+							cursor: pointer;
+						}
+						.upload{
+							background-color: #ff6a69;
+						}
+						.share{
+							background-color: #7ecef3;
+						}
+					}
+					.delete-button{
+						position: absolute;
+						z-index: 1;
+						bottom: -12px;
+						right: 0px;
+						padding-left: 12px;
+						text-align: center;
+						background-color: #fff;
+						input{
+							color: #b7b7b7;
+							cursor: pointer;
+							width: 65px;
+							height: 25px;
+							font-size: 14px;
+							border: 1px solid #e8e8e8;
+							border-radius: 12px;
+							background-color: transparent;
+						}
 					}
 				}
-				.art-work{
-					overflow: hidden;
-					margin-left: 100px;
-					float: left;
-					width: 240px;
-					border: 1px solid #fff;
-					border-radius: 10px;
-					img{
-						display: block;
-						width: 100%;
+				.work-zone{
+					padding: 40px 0 10px 0;
+					.origin-work{
+						position: relative;
+						overflow: hidden;
+						margin-left: 65px;
+						float: left;
+						width: 240px;
+						border: 1px solid #fff;
+						border-radius: 10px;
+						img{
+							display: block;
+							width: 100%;
+						}
+						.icon-origin{
+						    display: block;
+						    position: absolute;
+						    bottom: 1px;
+						    left: 0;
+						    width: 45px;
+						    height: 28px;
+						    background: url(/img/index-sprite.png)no-repeat -234px -42px;
+						    opacity: 0.9;
+						}
+					}
+					.art-work{
+						position: relative;
+						overflow: hidden;
+						margin-left: 100px;
+						float: left;
+						width: 240px;
+						border: 1px solid #fff;
+						border-radius: 10px;
+						img{
+							display: block;
+							width: 100%;
+						}
+						.icon-myOffer{
+							display: block;
+							position: absolute;
+							bottom: 1px;
+							left: 0;
+							width: 70px;
+							height: 28px;
+							background: url(/img/index-sprite.png) no-repeat -27px -92px;
+							opacity: 0.8;
+						}
+					}
+				}
+			}
+		}
+		.content-myWork{
+			.content-section{
+				padding: 30px 60px;
+				.line-break{
+					margin-left: -5px;
+					.break-date{
+						float: left;
+						.icon-break-blue{
+							display: block;
+							float: left;
+							width: 12px;
+							height: 12px;
+							background: url(/img/index-sprite.png) no-repeat -44px -65px;
+						}
+						.date-text{
+							display: block;
+							float: left;
+							margin-left: 10px;
+							line-height: 12px;
+							color: #a9a9a9;
+							font-size: 14px;
+							em{
+								font-style: normal;
+								margin-left: 15px;
+							}
+						}
+					}
+					.break-line{
+						float: left;
+						margin:5px 0px 5px 12px;
+						height: 0;
+						line-height: 12px;
+						width: 755px;
+						border-top:1px solid #e8e8e8;
 					}
 				}
 			}
