--- a/public/tasks/src/app/views/index/index.html
+++ b/public/tasks/src/app/views/index/index.html
@@ -23,7 +23,7 @@
 			<div class="section-rightarea">
 				<input type="button" class="section-btn ps" value="帮P">
 				<input type="button" class="section-btn share" value="分享">
-				<div class="qrcode">
+				<div class="qrcode none">
 					<i class="icon-arrow"></i>
 					<div class="icon-qrcode">
 						<img src="/img/qrcode.png" alt="二维码" class="qrcode-img">
