--- a/public/tasks/src/less/common.less
+++ b/public/tasks/src/less/common.less
@@ -74,6 +74,7 @@ body{
 	height: 60px;
 	width: 100%;
 	background-color: #ffaf47;
+	margin-bottom: 50px;
 	.left-area{
 		float: left;
 		.header-logo{
@@ -155,12 +156,12 @@ body{
 		position: relative;
 		.header-portrait{
 			position: relative;
+			overflow: hidden;
 			z-index: 10;
 			display: inline-block;
 			vertical-align: top;
 			width: 37px;
 			height: 37px;
-			overflow: hidden;
 			margin: 8px 106px 0 0;
 			border: 4px solid #ffaf47;
 			.portrait-icon{
@@ -281,7 +282,7 @@ body{
 			.qrcode{
 				position: absolute;
 				z-index: 800;
-				bottom: -145px;
+				bottom: -147px;
 				right: -15px;
 				width: 100px;
 				height: 145px;
